Fixed the aws-buttons to not overlap on mobiles

--- a/src/assets/scss/layout.scss
+++ b/src/assets/scss/layout.scss
@@ -306,12 +306,12 @@
   --button-hover-pressure: 2;
   --transform-speed: .185s;
   font-weight: bold;
+  white-space: preserve nowrap;
 
   @include maxQuery(675) {
     --button-default-height: 35px;
     --button-default-font-size: 11px;
     --button-raise-level: 4px;
-    min-width: 100px;
   }
 }
 
